--- a/test.html
+++ b/test.html
@@ -9,10 +9,10 @@
             padding: 0;
             margin: 0;
         }
-        /* section::after {
+        section::after {
             content: "";
             display: table;
-            clear: both; } */
+            clear: both; }
 
         section{
             border: 5px solid black;
@@ -31,8 +31,10 @@
         <div style="float: left; opacity: 0.3;background-color: blue;"></div>
         <div ></div>
         <div style="float: left; background-color: rgb(204, 204, 107);"></div>
-        <p>hello</p>
         <div style="float: left; background-color: rgb(204, 204, 107);"></div>
+        <div></div>
     </section>
+    <div></div>
+    
 </body>
 </html>
