--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
 
-    <section class="grid-test">
+    <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">Col 1 of 2</div>
             <div class="col-1-of-2">Col 1 of 2</div>
@@ -59,6 +59,29 @@
             <div class="col-3-of-4">Col 3 of 4</div>
         </div>
 
-    </section>
+    </section> -->
+
+    <main>
+        <div class="test">
+            <section class="section-about">
+            <div class="u-center-text u-margin-bottom-8">
+                <h2 class="heading-secondary">
+                    Exciting tours for adventurous people 
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-2">
+                    <h3 class="heading-tertiary">You are going to fall in love with nature</h3>
+                    <p class="paragraph">ipsum dolor sit amet consectetur, adipisicing elit. Beatae soluta porro quam atque tempore quaerat consequatur eius. Accusamus non suscipit, id porro quis at et quo ipsa voluptatem neque ullam.</p>
+                    
+                    <h3 class="heading-tertiary">You are going to fall in love with nature</h3>
+                    <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae atque quod reprehenderit non ratione repellat enim! Sunt molestias similique quaerat, accusantium error provident dolorem non itaque magnam eum harum dolores.</p>
+                </div>
+                <div class="col-1-of-2">Col 1 of 2</div>
+            </div>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
