--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="header__logo-box">
-            <img src="natours-img/logo-white.png" alt="Logo Image" class="header__logo">
+            <img src="img/logo-white.png" alt="Logo Image" class="header__logo">
         </div>
 
         <div class="header__text-box">
@@ -23,7 +23,7 @@
         </div>
     </header>
 
-
+    <!-- Float Practice -->
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">Col 1 of 2</div>
@@ -64,7 +64,7 @@
     <main>
         <div class="test">
             <section class="section-about">
-            <div class="u-center-text u-margin-bottom-8">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Exciting tours for adventurous people 
                 </h2>
@@ -72,13 +72,21 @@
 
             <div class="row">
                 <div class="col-1-of-2">
-                    <h3 class="heading-tertiary">You are going to fall in love with nature</h3>
+                    <h3 class="heading-tertiary u-margin-bottom-small">You are going to fall in love with nature</h3>
                     <p class="paragraph">ipsum dolor sit amet consectetur, adipisicing elit. Beatae soluta porro quam atque tempore quaerat consequatur eius. Accusamus non suscipit, id porro quis at et quo ipsa voluptatem neque ullam.</p>
                     
-                    <h3 class="heading-tertiary">You are going to fall in love with nature</h3>
-                    <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae atque quod reprehenderit non ratione repellat enim! Sunt molestias similique quaerat, accusantium error provident dolorem non itaque magnam eum harum dolores.</p>
+                    <h3 class="heading-tertiary u-margin-bottom-small">You are going to fall in love with nature</h3>
+                    <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae atque quod reprehenderit non ratione repellat enim! Sunt molestias similique</p>
+                    
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
-                <div class="col-1-of-2">Col 1 of 2</div>
+                <div class="col-1-of-2">
+                    <div class="composition">
+                        <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                        <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                        <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                    </div>
+                </div>
             </div>
             </section>
         </div>
