--- a/index.html
+++ b/index.html
@@ -158,9 +158,16 @@
                                         </ul>
                                     </div>
                                 </div>
-
+                                    <!-- Back Side of Card -->
                                 <div class="card__side card__side--back card__side--back-1">
-                                    BACK
+                                    <div class="card__cta">
+                                        <div class="card__price-box">
+                                            <p class="card__price-only">Only</p>
+                                            <div class="card__price-value">$297</div>
+                                        </div>
+                                        <a href="#" class="btn">Book Now!</a>
+                                
+                                    </div>
                                 </div>
                             </div>
                         </div>
