Story Section Completed

--- a/index.html
+++ b/index.html
@@ -248,8 +248,16 @@
                 </div>
             </section>
 
-            <!-- Booking Section -->
+            <!-- Section Stories-->
             <section class="section-stories">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm">
+                        Your Browser is not supported!
+                    </video>
+                </div>
+
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         We Make People Genuinely Happy 
@@ -257,7 +265,8 @@
                 </div>
 
                 <div class="row">
-                    <div class="story">
+                    <!-- 1st Portion -->
+                    <div class="story u-margin-top-big">
                         <figure class="story__shape">
                             <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
                             <figcaption class="story__caption">Mary Smith</figcaption>
@@ -268,7 +277,27 @@
                         </h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione molestias placeat consequatur ipsa assumenda odit itaque eveniet quam deserunt totam sapiente praesentium nihil alias id, reprehenderit doloribus repellendus, possimus quaerat!</p>
                         </div>
+                    </div>     
+                </div>
+
+                 <!-- Second Portion -->
+                <div class="row">
+                    <div class="story u-margin-top-big">
+                        <figure class="story__shape">
+                            <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">Jack Wilson</figcaption>
+                        </figure>
+                        <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Wow! My Life is completly Different Now
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione molestias placeat consequatur ipsa assumenda odit itaque eveniet quam deserunt totam sapiente praesentium nihil alias id, reprehenderit doloribus repellendus, possimus quaerat!</p>
+                        </div>
                     </div>
+                </div>
+
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
     </main>
