--- a/index.html
+++ b/index.html
@@ -300,6 +300,34 @@
                     <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
+
+            <!-- Booking Section -->
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="#" class="form">
+
+                                <div class="u-margin-bottom-medium">
+                                    <h2 class="heading-secondary">
+                                        Start Booking Now
+                                    </h2>
+                                </div>
+
+                                <div class="fomr__group">
+                                    <input type="text" class="form__input" placeholder="Full name", id="name" , required>
+                                    <label for="name" class="form__label">Full name</label>
+                                </div>
+
+                                <div class="fomr__group">
+                                    <input type="email" class="form__input" placeholder="Email Address", id="email" , required>
+                                    <label for="email" class="form__label">Email</label>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
     </main>
 </body>
 </html>
