--- a/index.html
+++ b/index.html
@@ -314,14 +314,36 @@
                                     </h2>
                                 </div>
 
-                                <div class="fomr__group">
+                                <div class="form__group">
                                     <input type="text" class="form__input" placeholder="Full name", id="name" , required>
                                     <label for="name" class="form__label">Full name</label>
                                 </div>
 
-                                <div class="fomr__group">
+                                <div class="form__group">
                                     <input type="email" class="form__input" placeholder="Email Address", id="email" , required>
                                     <label for="email" class="form__label">Email</label>
+                                </div>
+
+                                <div class="form__group u-margin-bottom-medium">
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="small" name="size">
+                                        <label for="small" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            small tour group
+                                        </label>
+                                    </div>
+
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="large" name="size">
+                                        <label for="large" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            large tour group
+                                        </label>
+                                    </div>
+                                </div>
+
+                                <div class="form__group">
+                                    <button class="btn btn--green">Next Step &rarr;</button>
                                 </div>
                             </form>
                         </div>
