--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     </section> -->
 
     <main>
-       
+        
+            <!-- About section -->
             <section class="section-about">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
@@ -351,5 +352,30 @@
                 </div>
             </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer__logo-box u-margin-bottom-big">
+            <img src="img/logo-green-2x.png" alt="Full Logo" class="footer__logo">
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    Build my <a href="#" class="footer__link">Jonas Schmedtmann </a>for his online course <a href="#" class="footer__link">Advance CSS and Sass</a>. Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal and commercial use, but Not to claim it as your own design. A credit to the orignal author, Jonas Schmedtmann, is of highly appreciated!
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
