--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
     <link rel="shortcut icon" href="img/favicon.png" type="Image/png">
 </head>
 <body>
+
+    <!-- Hamburder menu -->
+    <div class="navigation">
+        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+        <label for="navi-toggle" class="navigation__button">
+            <span class="navigation__icon">&nbsp;</span>
+        </label>
+
+        <div class="navigation__background">&nbsp;</div>
+
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="#" class="navigation__link"><span class="navigation__link--num">01</span>About Natous</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span class="navigation__link--num">02</span>Your Benfits</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span class="navigation__link--num">03</span>Popular Tours</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span class="navigation__link--num">04</span>Stories</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span class="navigation__link--num">05</span>Book Now</a></li>
+            </ul>
+        </nav>
+
+    </div>
+
+    <!-- Header Section -->
     <header class="header">
         <div class="header__logo-box">
             <img src="img/logo-white.png" alt="Logo Image" class="header__logo">
@@ -64,7 +88,7 @@
     </section> -->
 
     <main>
-        
+
             <!-- About section -->
             <section class="section-about">
             <div class="u-center-text u-margin-bottom-big">
