Completed My Popup Section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <span class="heading-primary--sub">is where life happens</span>
             </h1>
 
-            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+            <a href="#section-tour" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
 
@@ -156,7 +156,7 @@
             </section>
 
             <!-- Section Tour -->
-            <section class="section-tour">
+            <section class="section-tour" id="section-tour">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most Popular tours
@@ -191,7 +191,7 @@
                                             <div class="card__price-value">$297</div>
                                         </div>
                                         <!-- <a href="#" class="btn3 btn3__color-grey">Book Now!</a> -->
-                                        <a href="#" class="btn btn--white">Book Now!</a>
+                                        <a href="#popup" class="btn btn--white">Book Now!</a>
 
                                     </div>
                                 </div>
@@ -225,7 +225,7 @@
                                             <div class="card__price-value">$497</div>
                                         </div>
                                         <!-- <a href="#" class="btn3 btn3__color-grey">Book Now!</a> -->
-                                        <a href="#" class="btn btn--white">Book Now!</a>
+                                        <a href="#popup" class="btn btn--white">Book Now!</a>
 
                                     </div>
                                 </div>
@@ -259,7 +259,7 @@
                                             <div class="card__price-value">$497</div>
                                         </div>
                                         <!-- <a href="#" class="btn3 btn3__color-grey">Book Now!</a> -->
-                                        <a href="#" class="btn btn--white">Book Now!</a>
+                                        <a href="#popup" class="btn btn--white">Book Now!</a>
 
                                     </div>
                                 </div>
@@ -376,7 +376,7 @@
                 </div>
             </section>
     </main>
-
+    <!-- Footer Section -->
     <footer class="footer">
         <div class="footer__logo-box u-margin-bottom-big">
             <img src="img/logo-green-2x.png" alt="Full Logo" class="footer__logo">
@@ -401,5 +401,25 @@
             </div>
         </div>
     </footer>
+
+    <!-- Popup Section -->
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
+            </div>
+
+            <div class="popup__right">
+                <a href="#section-tour" class="popup__close">&times;</a>
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                <p class="popup__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more.</p>
+
+                <a href="#" class="btn btn--green">Book now</a>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
