--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     </main>
     <!-- Footer Section -->
     <footer class="footer">
-        <div class="footer__logo-box u-margin-bottom-big">
+        <div class="footer__logo-box">
             <img src="img/logo-green-2x.png" alt="Full Logo" class="footer__logo">
         </div>
 
