--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <!-- Hamburder menu -->
+    <!-- Hamburger menu -->
     <div class="navigation">
         <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
 
