--- a/Healthy Eat Design/index.html
+++ b/Healthy Eat Design/index.html
@@ -22,14 +22,14 @@
               <li class="navigation__item">
                 <a href="#" class="navigation__link bg-hover">Home</a>
               </li>
-              <li class="navigation__item">
+              <li class="navigation__item bg-hover">
                 <a href="#" class="navigation__link">Menu</a>
               </li>
               <li class="navigation__item">
-                <a href="#" class="navigation__link">About</a>
+                <a href="#" class="navigation__link bg-hover">About</a>
               </li>
               <li class="navigation__item">
-                <a href="#" class="navigation__link">Contact</a>
+                <a href="#" class="navigation__link bg-hover">Contact</a>
               </li>
             </ul>
           </div>
